# PSIOSpaceDungeon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: parameters_init.txt
include/engine/component/: AnimationController.h  Collider.h  Component.h  Health.h  Renderable.h  Sprite.h  Transform.h
include/engine/core/: CollisionManager.h  Debuger.h  Engine.h  Event.h  ISerializable.h  Input.h  Scene.h  VMath.h  Vector2.h
include/engine/object/: Button.h  Camera.h  Object.h
include/game/animations/: PlayerAnimations.h
include/game/core/: Asset.h  DataBlock.h  Game.h  Parameter.h  ScriptableObject.h  Serializer.h  Tag.h  WeaponShop.h
include/game/effect/: AudioPlayer.h  CustomAnimation.h  ParticleEffect.h
include/game/entity/: BasicEntity.h  Entity.h  HealthSystem.h  Weapon.h
include/game/level/: LevelElements.h  LevelGenerator.h  LevelManager.h  Tilemap.h
include/game/physics/: ParticleEffect.h  Rigidbody.h  Rycast.h
include/game/player/: PlayerAnim.h  PlayerAttack.h  PlayerCore.h  PlayerEnemyDetector.h  PlayerHealthSystem.h  PlayerMove.h  PlayerSpecialEffects.h  TrackingCamera.h
include/game/scenes/: GameScene.h  MainScene.h  PauseScene.h  StoreScene.h
include/game/ui/: BasicButtons.h  Notification.h  Slider.h
include/game/weapon/: Weapon.h
source/engine/component/: AnimationController.cpp  Collider.cpp  Component.cpp  Renderable.cpp  Sprite.cpp  Text.cpp  Transform.cpp
source/engine/core/: BinarySerializer.cpp  CollisionManager.cpp  Engine.cpp  Event.cpp  Input.cpp  Scene.cpp  VMath.cpp  Vector2.cpp
source/engine/object/: Button.cpp  Camera.cpp  Object.cpp
source/game/: main.cpp
source/game/animations/: PlayerAnimations.cpp
source/game/core/: Asset.cpp  DataBlock.cpp  Game.cpp  Parameter.cpp  ScriptableObject.cpp
source/game/effect/: AudioPlayer.cpp  CustomAnimation.cpp  ParticleEffect.cpp
source/game/entity/: BasicEntity.cpp  Entity.cpp  HealthSystem.cpp  Weapon.cpp
source/game/level/: LevelElements.cpp  LevelGenerator.cpp  LevelManager.cpp  Tilemap.cpp
source/game/physics/: ParticleEffect.cpp  Rigidbody.cpp  Rycast.cpp
source/game/player/: PlayerAnim.cpp  PlayerAttack.cpp  PlayerCore.cpp  PlayerEnemyDetector.cpp  PlayerHealthSystem.cpp  PlayerMove.cpp  PlayerSpecialEffects.cpp  TrackingCamera.cpp
source/game/scenes/: GameScene.cpp  MainScene.cpp  PauseScene.cpp  StoreScene.cpp
source/game/ui/: BasicButtons.cpp  Notification.cpp  Slider.cpp
source/game/weapon/: Weapon.cpp
